--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list_item"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
